[package]
name = "polyfuse"
version = "0.1.0"
description = "Asynchronous FUSE (Filesystem in Userspace) framework"
authors = [ "Yusuke Sasaki <yusuke.sasaki.nuem@gmail.com>" ]
repository = "https://github.com/ubnt-intrepid/polyfuse.git"
license = "MIT OR Apache-2.0"
edition = "2018"

[dependencies]
async-trait = "0.1"
bitflags = "1.2"
bytes = "0.4"
futures = { version = "0.3.0", features = [ "unstable", "async-await" ] }
lazy_static = "1"
libc = "0.2"
log = "0.4"
memoffset = "0.5"
smallvec = "0.6"

[dependencies.polyfuse-sys]
version = "0.1.0"
path = "polyfuse-sys"

[dev-dependencies]
version-sync = "0.8"

[dev-dependencies.cargo-husky]
version = "1"
default-features = false
features = [ "user-hooks" ]

[workspace]
members = [
  ".",
  "polyfuse-sys",
  "polyfuse-tokio",
  "systest",
  "examples/hello",
]
