[package]
name = "polyfuse-examples"
version = "0.0.0" # never publish
publish = false
description = "A collection of examples of polyfuse"
authors = ["Yusuke Sasaki <yusuke.sasaki.nuem@gmail.com>"]
edition = "2018"

[dependencies]
anyhow = "1"
async-trait = "0.1"
bytes = "0.4"
chrono = "0.4"
futures = "0.3"
libc = "0.2"
tokio = { git = "https://github.com/tokio-rs/tokio.git", branch = "master" }
tracing = "0.1"
tracing-subscriber = "0.1"

polyfuse = { path = "../polyfuse" }
polyfuse-tokio = { path = "../polyfuse-tokio" }
