[package]
name = "polyfuse-examples"
version = "0.0.0" # never publish
publish = false
description = "A collection of examples of polyfuse"
authors = ["Yusuke Sasaki <yusuke.sasaki.nuem@gmail.com>"]
edition = "2018"

[dev-dependencies]
anyhow = "1"
chrono = "0.4"
crossbeam = "0.7"
futures = "0.3"
futures-intrusive = "0.2"
libc = "0.2"
mio = "0.6"
nix = "0.16"
pico-args = "0.3"
slab = "0.4"
tracing = "0.1"
tracing-subscriber = "0.1"

polyfuse = { path = "../polyfuse" }
polyfuse-tokio = { path = "../polyfuse-tokio" }

[dev-dependencies.tokio]
version = "0.2"
features = [ "full" ]
