[package]
name = "fuse-async-fuzz"
version = "0.0.0"
publish = false
authors = ["Yusuke Sasaki <yusuke.sasaki.nuem@gmail.com>"]
edition = "2018"

[package.metadata]
cargo-fuzz = true

[dependencies]
fuse-async = { path = ".." }
libfuzzer-sys = { git = "https://github.com/rust-fuzz/libfuzzer-sys.git" }

# Prevent this from interfering with workspaces
[workspace]
members = ["."]

[[bin]]
name = "request_parser"
path = "fuzz_targets/request_parser.rs"
