[package]
name = "polyfuse-session"
version = "0.1.0-dev"
publish = false
authors = ["Yusuke Sasaki <yusuke.sasaki.nuem@gmail.com>"]
edition = "2018"

[dependencies]
polyfuse = { version = "0.4.0-dev", path = "../polyfuse" }
polyfuse-kernel = { version = "0.1.0-dev", path = "../polyfuse-kernel" }

async-trait = "0.1"
bitflags = "1.2"
bytes = "0.5"
futures = { version = "0.3.0", features = [ "unstable", "async-await" ] }
lazy_static = "1"
libc = "0.2"
memoffset = "0.5"
pin-project-lite = "0.1"
smallvec = "0.6"
tracing = "0.1"
