[package]
name = "polyfuse-sys"
version = "0.1.0"
description = "A collection of FFI bindings for polyfuse"
authors = [ "Yusuke Sasaki <yusuke.sasaki.nuem@gmail.com>" ]
repository = "https://github.com/ubnt-intrepid/polyfuse.git"
license = "MIT OR Apache-2.0"
edition = "2018"

[dependencies]
libc = "0.2"
