[package]
name = "polyfuse-tokio"
version = "0.1.0"
publish = false
description = "Tokio integration for polyfuse"
authors = ["Yusuke Sasaki <yusuke.sasaki.nuem@gmail.com>"]
repository = "https://github.com/ubnt-intrepid/polyfuse.git"
edition = "2018"

[dependencies]
bytes04 = { package = "bytes", version = "0.4" }
futures = { version = "0.3.0", features = [ "unstable", "async-await" ] }
libc = "0.2"
mio = "0.6"
tokio = { git = "https://github.com/tokio-rs/tokio.git", branch = "master" }
tracing = "0.1"

[dependencies.polyfuse]
version = "0.1.0"
path = "../polyfuse"

[dependencies.polyfuse-sys]
version = "0.1.0"
path = "../polyfuse-sys"
