[package]
name = "polyfuse-tokio"
version = "0.2.0-dev"
publish = false
description = "Tokio integration for polyfuse"
authors = ["Yusuke Sasaki <yusuke.sasaki.nuem@gmail.com>"]
repository = "https://github.com/ubnt-intrepid/polyfuse.git"
license = "MIT OR Apache-2.0"
edition = "2018"
readme = "README.md"

[dependencies]
bytes = "0.5"
futures = { version = "0.3.0", features = [ "unstable", "async-await" ] }
libc = "0.2"
mio = "0.6"
pin-project = "0.4"
tracing = "0.1"

[dependencies.tokio]
version = "0.2"
features = [ "io-driver", "signal", "rt-core" ]

[dependencies.polyfuse]
version = "0.3.0-dev"
path = "../polyfuse"

[dev-dependencies]
version-sync = "0.8"
