[package]
name = "polyfuse"
version = "0.3.3"
description = "A FUSE (Filesystem in Userspace) library for Rust."
authors = [ "Yusuke Sasaki <yusuke.sasaki.nuem@gmail.com>" ]
repository = "https://github.com/ubnt-intrepid/polyfuse.git"
license = "MIT OR Apache-2.0"
edition = "2018"
readme = "README.md"
categories = [ "filesystem" ]
keywords = [ "fuse", "filesystem", "async", "futures" ]
exclude = [ "systest/**/*" ]

[dependencies]
async-trait = "0.1"
bitflags = "1.2"
bytes = "0.5"
futures = { version = "0.3.0", features = [ "unstable", "async-await" ] }
lazy_static = "1"
libc = "0.2"
memoffset = "0.5"
pin-project-lite = "0.1"
smallvec = "0.6"
tracing = "0.1"

[dev-dependencies]
version-sync = "0.8"
