[package]
name = "systest"
version = "0.0.0" # never publish
publish = false
authors = ["Yusuke Sasaki <yusuke.sasaki.nuem@gmail.com>"]
edition = "2018"
build = "build.rs"

[dependencies]
polyfuse-sys = { path = "../polyfuse-sys" }
libc = "0.2"

[build-dependencies]
ctest = "0.2"

[[test]]
name = "test_kernel"
path = "tests/test_kernel.rs"
harness = false
