[package]
name = "polyfuse-kernel-systest"
version = "0.0.0" # never publish
publish = false
authors = ["Yusuke Sasaki <yusuke.sasaki.nuem@gmail.com>"]
edition = "2018"
build = "build.rs"

[dependencies]
libc = "0.2"
polyfuse-kernel = { path = "../polyfuse-kernel" }

[build-dependencies]
ctest = "0.2"

[[test]]
name = "test_kernel"
path = "tests/test_kernel.rs"
harness = false
