[package]
name = "polyfuse-smol"
version = "0.1.0-dev"
publish = false
description = "smol integration for polyfuse"
authors = ["Yusuke Sasaki <yusuke.sasaki.nuem@gmail.com>"]
repository = "https://github.com/ubnt-intrepid/polyfuse.git"
license = "MIT OR Apache-2.0"
edition = "2018"
readme = "README.md"

[dependencies]
polyfuse = { version = "0.4.0-dev", path = "../polyfuse" }
polyfuse-kernel = { version = "0.1.0-dev", path = "../polyfuse-kernel" }

async-io = "1.2"
async-trait = "0.1"
bitflags = "1.2"
bytes = "0.5"
futures = { version = "0.3", features = [ "unstable", "async-await" ] }
lazy_static = "1"
libc = "0.2"
memoffset = "0.5"
pin-project-lite = "0.1"
smallvec = "0.6"
tracing = "0.1"

[dev-dependencies]
version-sync = "0.8"
