[package]
name = "polyfuse"
version = "0.4.1"
description = "A FUSE (Filesystem in Userspace) library for Rust."
repository = "https://github.com/ubnt-intrepid/polyfuse.git"
license = "MIT OR Apache-2.0"
edition = "2018"
readme = "../../README.md"
categories = [ "filesystem" ]
keywords = [ "fuse", "filesystem", "async", "futures" ]

[dependencies]
polyfuse-kernel = { version = "0.1.0", path = "../polyfuse-kernel" }

either = "1"
libc = "0.2"
tracing = "0.1"
zerocopy = "0.3"

[dev-dependencies]
pin-project-lite = "0.2"
