[package]
name = "polyfuse-example-basic"
version = "0.0.0"
publish = false
edition = "2018"

[dependencies]
polyfuse = { path = "../../crates/polyfuse" }
polyfuse-daemon = { path = "../../crates/polyfuse-daemon" }

anyhow = "1"
async-std = ">=1.7.0"
libc = "0.2"
pico-args = "0.3"
tracing = "0.1"
tracing-subscriber = "0.1"
