[package]
name = "example-hello"
version = "0.0.0"
authors = ["Yusuke Sasaki <yusuke.sasaki.nuem@gmail.com>"]
edition = "2018"
publish = false

[dependencies]
anyhow = "1"
async-trait = "0.1"
futures = "0.3"
libc = "0.2"
tokio = { git = "https://github.com/tokio-rs/tokio.git", branch = "master" }
tracing = "0.1"
tracing-subscriber = "0.1"

polyfuse = { path = "../.." }
polyfuse-tokio = { path = "../../polyfuse-tokio" }
