[package]
name = "polyfuse-example-hello"
version = "0.0.0"
publish = false
edition = "2018"

[dependencies]
polyfuse = { path = "../../crates/polyfuse" }

anyhow = "1"
async-std = { version = ">=1.7.0", features = [ "attributes" ] }
libc = "0.2"
pico-args = "0.3"
tracing = "0.1"
tracing-subscriber = "0.1"
