[package]
name = "polyfuse-example-passthrough"
version = "0.0.0"
publish = false
edition = "2018"

[dependencies]
polyfuse = { path = "../../crates/polyfuse" }
polyfuse-example-async-std-support = { path = "../async-std-support" }

anyhow = "1"
async-std = { version = ">=1.7.0", features = [ "attributes" ] }
either = "1"
futures = "0.3"
libc = "0.2"
nix = "0.16"
pico-args = "0.3"
slab = "0.4"
tracing = "0.1"
tracing-subscriber = "0.1"
