[package]
name = "polyfuse-example-path-through"
version = "0.0.0"
publish = false
edition = "2018"

[dependencies]
polyfuse = { path = "../../crates/polyfuse" }

anyhow = "1"
libc = "0.2"
nix = { version = "0.30", features = [ "user", "fs" ] }
pico-args = "0.3"
slab = "0.4"
tracing = "0.1"
tracing-subscriber = "0.1"
