[package]
name = "polyfuse-example-poll"
version = "0.0.0"
publish = false
edition = "2018"
default-run = "polyfuse-example-poll"

[[bin]]
name = "polyfuse-example-poll-client"
path = "src/poll_client.rs"

[dependencies]
polyfuse = { path = "../../crates/polyfuse" }

anyhow = "1"
dashmap = "3"
libc = "0.2"
pico-args = "0.3"
tracing = "0.1"
tracing-subscriber = "0.1"

# for client
tokio = { version = ">=1.8.4", features = [ "macros", "fs", "io-util", "net", "rt-multi-thread" ] }
futures = "0.3"
