[package]
name = "polyfuse-example-with-async-std"
version = "0.0.0"
publish = false
edition = "2018"

[dependencies]
polyfuse = { path = "../../crates/polyfuse" }

anyhow = "1"
async-io = "1.3"
async-std = { version = "1.8", features = [ "attributes", "unstable" ] }
futures = "0.3"
libc = "0.2"
pico-args = "0.3"
tracing = "0.1"
tracing-subscriber = "0.1"
