[package]
name = "polyfuse-example-with-tokio"
version = "0.0.0"
publish = false
edition = "2018"

[dependencies]
polyfuse = { path = "../../crates/polyfuse" }

anyhow = "1"
futures = "0.3"
libc = "0.2"
pico-args = "0.3"
tokio = { version = "0.3.2", features = [ "macros", "net", "rt-multi-thread" ] }
tracing = "0.1"
tracing-subscriber = "0.1"
