[package]
name = "polyfuse-example-passthrough"
version = "0.0.0"
publish = false
edition = "2021"

[dependencies]
polyfuse = { path = "../../crates/polyfuse" }

anyhow = "1"
either = "1"
libc = "0.2"
nix = { version = "0.30", features = [ "user", "fs" ] }
pico-args = { workspace = true }
slab = "0.4"
tracing = "0.1"
tracing-subscriber = { workspace = true }
