[package]
name = "polyfuse-example-with-tokio"
version = "0.0.0"
publish = false
edition = "2021"

[dependencies]
polyfuse = { path = "../../crates/polyfuse" }

anyhow = "1"
futures = "0.3"
libc = "0.2"
pico-args = { workspace = true }
tokio = { version = ">=1.8.4", features = [ "macros", "net", "rt-multi-thread" ] }
tracing = "0.1"
tracing-subscriber = { workspace = true }
